Getting JSON file with axios, random quote is presented after onClick event

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,11 @@
     -->
     <!--Import Google Icon Font-->
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <!--Import Google Icon Font-->
+    <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
@@ -31,6 +36,7 @@
       href="css/materialize.min.css"
       media="screen,projection"
     />
+
     <title>React App</title>
   </head>
   <body>
