--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 
     <title>React App</title>
   </head>
-  <body>
+  <body id="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <div id="root"></div>
